@@ -29,15 +29,15 @@
  */
 char *stripNonAlpha(char *w) {
 	int wl = strlen(w);
-	int i, n = 0;
+	int n = 0;
 	char *naTemp = NULL;
 
-	if (w[wl] == '\n') w[wl--] = '\0';
+	if (w[wl] == '\n') w[wl] = '\0';
 
-	if (! (naTemp = (char*) realloc(naTemp, wl)) )
+	if (! (naTemp = (char*) malloc(wl)) )
 		return NULL;
 
-	for (i = 0; i < wl; ++i) {
+	for (int i = 0; i < wl; ++i) {
 		if ( (w[i] >= 'A' && w[i] <= 'Z') ||
 			 (w[i] >= 'a' && w[i] <= 'z') ||
 			  w[i] == ' ' )
@@ -60,7 +60,7 @@ char *stripMarkupTags(char *w) {
 	int n = 0;
 	char *mtTemp = NULL;
 
-	if (! (mtTemp = (char*) realloc(mtTemp, wl)) )
+	if (! (mtTemp = (char*) malloc(wl)) )
 		return NULL;
 
 	for (int i = 0; i < wl; ++i) {
@@ -168,27 +168,23 @@ int strncmpi (const char *s1, const char *s2, size_t n) {
  * @return size_t
  */
 static size_t curlCallback(void *contents, size_t size, size_t nmemb, void *data) {
-	size_t realsize = size * nmemb;
 	struct filebuffer *fb = (struct filebuffer*) data;
 
-	if (! (fb->fbuffer = (char*) realloc(fb->fbuffer, fb->fbsize + realsize + 1)) ) {
-		fprintf(stderr, "Not enough memory (realloc returned NULL)\n");
+	char *smt = stripMarkupTags((char*)contents);
+	char *sna = stripNonAlpha(smt);
+	size_t sna_size = strlen(sna);
+	free(smt);
+
+	if (! (fb->fbuffer = (char*) malloc(sizeof(char) * sna_size)) ) {
+		fprintf(stderr, "Can't allocate memory for buffer. Returning 0 bytes.\n");
 		return 0;
 	}
 
-	memcpy(&(fb->fbuffer[fb->fbsize]), contents, realsize);
-	fb->fbsize += realsize;
-	fb->fbuffer[fb->fbsize] = '\0';
+	strncpy(fb->fbuffer, sna, sna_size);
+	fb->fbsize = sna_size;
+	free(sna);
 
-	char *smt = stripMarkupTags(fb->fbuffer);
-	char *sma = stripNonAlpha(smt);
-	free(smt);
-
-	strncpy(fb->fbuffer, sma, strlen(sma));
-	fb->fbsize = strlen(fb->fbuffer);
-	free(sma);
-
-	return realsize;
+	return size * sna_size;
 }
 #endif
 
@@ -204,8 +200,6 @@ struct filebuffer *proccessFile(const char *pFile) {
 	CURL *webRes;
 	if (strncmpi(pFile, "http", 4) == 0) {
 		fb = (struct filebuffer*) malloc(sizeof(struct filebuffer));
-		fb->fbuffer = malloc(1);
-		fb->fbsize = 0;
 		curl_global_init(CURL_GLOBAL_ALL);
 		webRes = curl_easy_init();
 		curl_easy_setopt(webRes, CURLOPT_URL, pFile);
@@ -219,25 +213,37 @@ struct filebuffer *proccessFile(const char *pFile) {
 #endif
 	if ((srchFile = fopen(pFile, "r"))) {
 		fb = (struct filebuffer*) malloc(sizeof(struct filebuffer));
+		char *tmpbuff = NULL;
 
 		fseek(srchFile, 0, SEEK_END);
 	  	fb->fbsize = ftell(srchFile);
 	  	rewind(srchFile);
 
-		if (! (fb->fbuffer = (char*) malloc(sizeof(char) * fb->fbsize)) )
+		if (! (tmpbuff = (char*) malloc(sizeof(char) * fb->fbsize)) ) {
+			fprintf(stderr, "Can't allocate memory for temporary buffer for file %s.\n", pFile);
 			return NULL;
+		}
 
-	  	if (fread(fb->fbuffer, sizeof(char), fb->fbsize, srchFile) != fb->fbsize)
+	  	if (fread(tmpbuff, sizeof(char), fb->fbsize, srchFile) != fb->fbsize) {
+			fprintf(stderr, "Can't read file %s.\n", pFile);
 			return NULL;
+		}
 
 		fclose(srchFile);
 
-		char *tmpbuff = stripNonAlpha(fb->fbuffer);
+		char *snabuff = stripNonAlpha(tmpbuff);
+		size_t sna_size = strlen(snabuff);
+		free(tmpbuff);
 
-	  	strncpy(fb->fbuffer, tmpbuff, strlen(tmpbuff));
-	  	fb->fbsize = strlen(fb->fbuffer);
+		if (! (fb->fbuffer = (char*) malloc(sizeof(char) * sna_size)) ) {
+			fprintf(stderr, "Can't allocate memory for buffer.\n");
+			return NULL;
+		}
 
-	  	free(tmpbuff);
+	  	strncpy(fb->fbuffer, snabuff, sna_size);
+	  	fb->fbsize = sna_size;
+
+	  	free(snabuff);
 	}
 
   	return fb;
